Altered readme and removed database url

--- a/analysis/data_retrieval/by_version/2.1.1_retrieval.ipynb
+++ b/analysis/data_retrieval/by_version/2.1.1_retrieval.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = \"mysql+pymysql://maint:strangle.explode.sprout.underfeed.yo-yo@cmlpsiturk.compmemlab.org:3306/psiturk\"\n",
+    "db_url = \"...\"\n",
     "table_name = \"JOR\""
    ]
   },
