--- a/analysis/data_retrieval/by_version/class_data_retrieval.ipynb
+++ b/analysis/data_retrieval/by_version/class_data_retrieval.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = \"mysql+pymysql://maint:strangle.explode.sprout.underfeed.yo-yo@psiturk.sas.upenn.edu:3306/psiturk\"\n",
+    "db_url = \"...\"\n",
     "table_name = \"JOR_class\""
    ]
   },
