--- a/analysis/data_retrieval/debugging_through_retrieval.ipynb
+++ b/analysis/data_retrieval/debugging_through_retrieval.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Database Variables\n",
-    "db_url = \"mysql+pymysql://maint:strangle.explode.sprout.underfeed.yo-yo@psiturk.sas.upenn.edu:3306/psiturk\"\n",
+    "db_url = \"...\"\n",
     "table_name = \"JOR\"\n",
     "data_column_name = 'datastring'"
    ]
@@ -645,9 +645,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jor",
+   "display_name": "base",
    "language": "python",
-   "name": "jor"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -659,7 +659,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3 (default, Jul  2 2020, 11:26:31) \n[Clang 10.0.0 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5acbd729419d4ea191f47d578241fedaf7e57638013c4e4fc53acefaa95c16d3"
+   }
   }
  },
  "nbformat": 4,
